--- a/demo/html/demo.html
+++ b/demo/html/demo.html
@@ -2,26 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>测试版本号</title> 
-<!--
-    <link href="<chsi:spath path="/ch/iconfont.css" commonResource='true' />" rel="stylesheet"/>
-    <link href="<chsi:spath path="/ch/style.css?id=234" commonResource='true' />" rel="stylesheet"/>
--->
-    <link rel="stylesheet" href="https://t4.chei.com.cn/common/js/poshytip/tip-yellow/tip-yellow.css" media="screen" />
-    <link rel="stylesheet" href="https://t4.chei.com.cn/common/js/poshytip/tip-yellow/tip-yellow.css?id=23434" media="screen" />
-    <link rel="stylesheet" href="../css/min/style.min.css?v=1488787768587">
+    <title>测试版本号</title>
+    <link rel="stylesheet" href="../css/min/style.min.css?v=1489041305443">
 </head>
 <body>
     <h1>测试版本号</h1>
     <div id='divId' class="content">hello</div>
-    <script src="http://t3.chei.com.cn/common/zbbm/js/jquery/jquery-1.8.3.min.js"></script> 
-    <script src="http://t3.chei.com.cn/common/zbbm/js/jquery/jquery-1.8.3.min.js?id=2234"></script>   
-<!--
-    <script src="<chsi:spath path="/plugins/dialog/6.0.5/dialog-min.js" commonResource='true' />"></script>
-    <script src="<chsi:spath path="/plugins/dialog/6.0.5/dialog-min.js?id=23434" commonResource='true' />"></script>
--->
-    <script src="../js/a.js?v=1488787768586"></script>   
-    <script src="https://t1.chei.com.cn/common/wap/js/wap.min.js"></script>
-    <script>if(wapFn()){addFile('css','https://t1.chei.com.cn/yz/sytj/assets/css/wap/tj-wap.min.css');}</script> 
+  
+    <script src="../js/a.js?v=1489041305443"></script> 
+    <script src="https://t1.chei.com.cn/yz/sytj/assets/css/wap/tj-wap.min.css?v=1489041305443"></script> 
 </body>
 </html>
